Cambios y anadidos de interfaces

--- a/Captacion/creacionProducto.html
+++ b/Captacion/creacionProducto.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tipos de depositos</title>
+    <title>Creacion de un producto</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -95,46 +96,53 @@
         }
     </style>
 </head>
+
 <body>
     <header class="d-flex justify-content-between align-items-center px-3 py-2">
         <div>
             <a href="#" class="btn btn-light">Volver</a>
         </div>
-        <h1 class="text-center flex-grow-1">Tipos de depositos</h1>
+        <h1 class="text-center flex-grow-1">Creación de producto</h1>
         <h5 class="navbar navbar-light">logo</h5>
     </header>
     
     <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-4">
-                <div class="savings-card">
-                    <img src="Images/plazos.png" alt="Plazos">
-                    <h5>Plazos</h5>
-                    <p><strong>Depósitos a Plazo: </strong>Una forma segura de invertir su dinero a cambio de una tasa de interés fija durante un período determinado. Este tipo de inversión garantiza el retorno del capital invertido más los intereses al final del plazo acordado.</p>
-                    <a href="#" class="custom-button">Plazos</a>
-                </div>
+        <form>
+            <div class="form-group">
+                <label for="productName">Nombre del producto</label>
+                <input type="text" class="form-control" id="productName" placeholder="Nombre del producto">
             </div>
-            <div class="col-md-4">
-                <div class="savings-card">
-                    <img src="Images/fondosMutuos.png" alt="Fondos-Mutuo">
-                    <h5>Fondos Mutuos</h5>
-                    <p><Strong>Fondos Mutuos: </Strong>Una inversión diversificada que le permite invertir en una canasta de activos, como acciones, bonos o instrumentos del mercado monetario. Los fondos mutuos son gestionados por profesionales y ofrecen la posibilidad de acceder a una amplia gama de inversiones con menor riesgo que invertir en un solo activo.</p>
-                    <a href="#" class="custom-button">Fondos Mutuos</a>
-                </div>
+            <div class="form-group">
+                <label for="productDescription">¿Qué es?</label>
+                <textarea class="form-control" id="productDescription" rows="3" placeholder="Descripción del producto"></textarea>
             </div>
-            <div class="col-md-4">
-                <div class="savings-card">
-                    <img src="Images/certificado.png" alt="Certificados">
-                    <h5>Certificados</h5>
-                    <p><Strong>Certificados de Inversión (Cetes): </Strong>Un instrumento de renta fija emitido por el gobierno que le permite obtener una tasa de interés fija durante un período determinado. Los Cetes son considerados una inversión segura, ya que están respaldados por el gobierno, y son una opción popular para quienes buscan preservar el capital mientras obtienen rendimientos predecibles.</p>
-                    <a href="#" class="custom-button">Certificados</a>
-                </div>
+            <div class="form-group">
+                <label for="productFunction">¿Cómo funciona?</label>
+                <textarea class="form-control" id="productFunction" rows="3" placeholder="Funcionamiento del producto"></textarea>
             </div>
-        </div>
+            <div class="form-group">
+                <label for="productBenefits">¿Cuáles son los beneficios?</label>
+                <textarea class="form-control" id="productBenefits" rows="3" placeholder="Beneficios del producto"></textarea>
+            </div>
+            <div class="form-group">
+                <label for="productImage">Imagen del producto</label>
+                <input type="file" class="form-control-file" id="productImage">
+            </div>
+            <div class="form-group">
+                <label for="productInterest">Interés</label>
+                <input type="text" class="form-control" id="productInterest" placeholder="Interés del producto">
+            </div>
+            <div class="form-group">
+                <label for="productAdditionalDescription">Descripción adicional</label>
+                <textarea class="form-control" id="productAdditionalDescription" rows="3" placeholder="Descripción adicional del producto"></textarea>
+            </div>
+            <button type="submit" class="btn btn-primary">Guardar</button>
+        </form>
     </div>
-    
+
     <footer>
         <p>&copy; 2024 Nombre de tu empresa. Todos los derechos reservados.</p>
     </footer>
 </body>
+
 </html>
