--- a/Contabilidad/gestionar-cuenta.html
+++ b/Contabilidad/gestionar-cuenta.html
@@ -160,7 +160,7 @@
                     <div class="button-group">
                         <button type="button" class="btn btn-primary standard-button" data-toggle="modal" data-target="#crearModal">Crear</button>
                         <button type="button" class="btn btn-primary standard-button" data-toggle="modal" data-target="#modificarModal">Modificar</button>
-                        <button type="button" class="btn btn-primary standard-button" data-toggle="modal" data-target="#borrarModal">Borrar</button>
+                        <button type="button" class="btn btn-primary standard-button" data-toggle="modal" data-target="#borrarModal">Desabilitar</button>
                         <button type="button" class="btn btn-primary standard-button" data-toggle="modal" data-target="#consultarModal">Consultar</button>
                     </div>
                 </form>
@@ -368,7 +368,7 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="borrarModalLabel">Borrar Cuenta</h5>
+                    <h5 class="modal-title" id="borrarModalLabel">Desabilitar Cuenta</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
@@ -381,7 +381,7 @@
                             <input type="text" class="form-control" id="borrarIDCuenta" placeholder="Ingrese el ID de la cuenta">
                         </div>
                         <div class="modal-footer">
-                            <button type="submit" class="btn btn-danger">Borrar</button>
+                            <button type="submit" class="btn btn-danger">Desabilitar</button>
                         </div>
                     </form>
                 </div>
