Transferencias internas funcionalidad

--- a/Tesoreria/index.html
+++ b/Tesoreria/index.html
@@ -55,7 +55,7 @@
                 -->
                 <div class="col-md-4 module">
                     <img src="img/Transferencias.png">
-                    <a href="transferencias.html" class="module-title">Transferencias Internas</a>
+                    <a href="Transferencias Internas/transferencias.php" class="module-title">Transferencias Internas</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="img/Boveda.png">
