--- a/Tesoreria/index.html
+++ b/Tesoreria/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tesoreria / Transferencias</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="public/css/styles.css">
     <style>
         .module {
             margin: 5px 0;
@@ -47,52 +47,40 @@
         <div class="main-content container">
             <h3 class="text-center mt-4">Pagina Principal</h3>
             <div class="row mb-4">
-                <!--
                 <div class="col-md-4 module">
-                    <img src="img/Tesoreria.png">
-                    <a href="monitoreoEfectivo.html" class="module-title">Monitoreo de efectivo</a>
-                </div>
-                -->
-                <div class="col-md-4 module">
-                    <img src="img/Transferencias.png">
+                    <img src="public/img/Transferencias.png">
                     <a href="Transferencias Internas/transferencias.php" class="module-title">Transferencias Internas</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Boveda.png">
-                    <a href="gestionBovedas.html" class="module-title">Bóveda</a>
+                    <img src="public/img/Boveda.png">
+                    <a href="Boveda/gestionBovedas.php" class="module-title">Bóveda</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Desembolsos.png">
+                    <img src="public/img/Desembolsos.png">
                     <a href="desembolsos.html" class="module-title">Desembolsos</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/ArqueoCajas.png">
+                    <img src="public/img/ArqueoCajas.png">
                     <a href="gestionCajas.html" class="module-title">Gestion de Cajas</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Inversiones.png">
+                    <img src="public/img/Inversiones.png">
                     <a href="inversiones.html" class="module-title">Gestión de Inversiones</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Asientos.png">
+                    <img src="public/img/Asientos.png">
                     <a href="asientos.html" class="module-title">Asientos</a>
                 </div>
-                <!--
                 <div class="col-md-4 module">
-                    <img src="img/Movimientos.jpg">
-                    <a href="movimientos.html" class="module-title">Movimientos</a>
-                </div>
-                -->
-                <div class="col-md-4 module">
-                    <img src="img/ClienteTesoreria.png">
+                    <img src="public/img/ClienteTesoreria.png">
                     <a href="clientesTesoreria.html" class="module-title">Clientes de Tesoreria</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Reportes.png">
+                    <img src="public/img/Reportes.png">
                     <a href="reportes.html" class="module-title">Reportes</a>
                 </div>
                 <div class="col-md-4 module">
-                    <img src="img/Normativas.png">
+                    <img src="public/img/Normativas.png">
                     <a href="normativas.html" class="module-title">Normativas</a>
                 </div>
             </div>
