--- a/Captacion/SolicitudProductos.html
+++ b/Captacion/SolicitudProductos.html
@@ -4,100 +4,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Creacion de Producto</title>
+    <title>Solicitud de Producto</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Poppins", sans-serif;
-            background-color: #e9ecef;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header,
-        footer {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-        }
-
-        footer {
-            margin-top: auto;
-            text-align: center;
-        }
-
-        .container {
-            flex-grow: 1;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .custom-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            text-decoration: none;
-            color: #000;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            width: 200px;
-            margin: 20px auto 0;
-        }
-
-        .custom-button img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-        }
-
-        .custom-button:hover {
-            background-color: #d0d0d0;
-        }
-
-        .savings-description {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .savings-card {
-            background-color: #3b5998;
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .savings-card img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px;
-        }
-
-        .savings-card h5 {
-            margin-bottom: 10px;
-        }
-
-        .savings-card p {
-            font-size: 14px;
-        }
-    </style>
+    <link href="css/solicitud.css" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="menu">
+        <h2>Menú</h2>
+        <a href="index.html">Inicio</a>
+        <a href="creacionProducto.html">Creacion Producto</a>
+        <a href="creacionTipoProducto.html">Creacion Tipo Producto</a>
+        <a href="tipos-cuentas.html">Tipos cuentas</a>
+        <a href="tipos-depositos.html">Tipos depositos</a>
+        <a href="vistaMovimientos.html">Vistas de Movimientos</a>
+    </div>
+
     <header class="d-flex justify-content-between align-items-center px-3 py-2">
         <div>
             <a href="#" class="btn btn-light">Volver</a>
@@ -105,59 +28,38 @@
         <h1 class="text-center flex-grow-1">Solicitud de producto</h1>
         <h5 class="navbar navbar-light">logo</h5>
     </header>
-    
+
     <div class="container mt-5">
-        <div class="container mt-5">
-            <div class="row text-start">
-                <strong>Nombre: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Tipo de documento: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Numero de documento: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Edad: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Estado civil: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Telefono: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Direccion: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Descripcion: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Telefono: </strong>
-            </div>
-
-            <hr>
-
-            <div class="row text-start">
-                <strong>Esta solicitando el: </strong>
-            </div>
-            <div class="row text-start">
-                <strong>Con una tasa de interes del: </strong>
-            </div>
+        <div class="row">
             <div class="col">
-                <a href="#" class="custom-button" onclick="confirmSolicitar()">
-                    
-                    <strong>Solicitar</strong>
-                </a>
+                <h3>Detalles de la Solicitud</h3>
+                <p><strong>Tipo de Cuenta:</strong> <span id="tipoCuenta"></span></p>
+                <p><strong>Intereses:</strong> <span id="intereses"></span></p>
+                <!-- Puedes agregar más detalles o formularios aquí -->
             </div>
         </div>
     </div>
 
-
-
     <footer>
         <p>&copy; 2024 Nombre de tu empresa. Todos los derechos reservados.</p>
     </footer>
+
+    <script>
+        document.addEventListener('DOMContentLoaded', function () {
+            // Obtener los datos del localStorage
+            var tipoCuenta = localStorage.getItem('tipoCuenta');
+            var intereses = localStorage.getItem('intereses');
+
+            // Mostrar los datos en los elementos HTML correspondientes
+            document.getElementById('tipoCuenta').textContent = tipoCuenta ? tipoCuenta : "No disponible";
+            document.getElementById('intereses').textContent = intereses ? intereses : "No disponible";
+
+            // Limpiar el localStorage después de mostrar los datos
+            localStorage.removeItem('tipoCuenta');
+            localStorage.removeItem('intereses');
+        });
+    </script>
+
 </body>
 
 </html>
