--- a/Captacion/creacionProducto.html
+++ b/Captacion/creacionProducto.html
@@ -6,98 +6,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Creacion de un producto</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Poppins", sans-serif;
-            background-color: #e9ecef;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header,
-        footer {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-        }
-
-        footer {
-            margin-top: auto;
-            text-align: center;
-        }
-
-        .container {
-            flex-grow: 1;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .custom-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            text-decoration: none;
-            color: #000;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            width: 200px;
-            margin: 20px auto 0;
-        }
-
-        .custom-button img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-        }
-
-        .custom-button:hover {
-            background-color: #d0d0d0;
-        }
-
-        .savings-description {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .savings-card {
-            background-color: #3b5998;
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .savings-card img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px;
-        }
-
-        .savings-card h5 {
-            margin-bottom: 10px;
-        }
-
-        .savings-card p {
-            font-size: 14px;
-        }
-    </style>
+    <link href="css/producto.css" rel="stylesheet">
+   
 </head>
 
 <body>
+
+
+    <div class="menu">
+        <h2>Menú</h2>
+        <a href="index.html">Inicio</a>
+        <a href="creacionProducto.html">Creacion Producto</a>
+        <a href="creacionTipoProducto.html">Creacion Tipo Producto</a>
+        <a href="SolicitudProductos.html">Solicitud de producto</a>
+        <a href="tipos-cuentas.html">Tipos cuentas</a>
+        <a href="tipos-depositos.html">Tipos depositos</a>
+        <a href="vistaMovimientos.html">Vistas de Movimientos</a>
+    </div>
+
     <header class="d-flex justify-content-between align-items-center px-3 py-2">
         <div>
             <a href="#" class="btn btn-light">Volver</a>
@@ -136,9 +62,22 @@
                 <label for="productAdditionalDescription">Descripción adicional</label>
                 <textarea class="form-control" id="productAdditionalDescription" rows="3" placeholder="Descripción adicional del producto"></textarea>
             </div>
+            <div class="form-group">
+                <label for="productType">Tipo de producto</label>
+                <select class="form-control" id="productType">
+                    <option value="tipo1">Tipo 1</option>
+                    <option value="tipo2">Tipo 2</option>
+                    <option value="tipo3">Tipo 3</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label for="productRequirements">Requisitos</label>
+                <input type="text" class="form-control" id="productRequirements" placeholder="Requisitos del producto">
+            </div>
             <button type="submit" class="btn btn-primary">Guardar</button>
         </form>
     </div>
+    
 
     <footer>
         <p>&copy; 2024 Nombre de tu empresa. Todos los derechos reservados.</p>
