--- a/Captacion/vistaMovimientos.html
+++ b/Captacion/vistaMovimientos.html
@@ -6,98 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vista de movimientos</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-    <style>
-        body {
-            font-family: "Poppins", sans-serif;
-            background-color: #e9ecef;
-            margin: 0;
-            padding: 0;
-            min-height: 100vh;
-            display: flex;
-            flex-direction: column;
-        }
-
-        header,
-        footer {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-        }
-
-        footer {
-            margin-top: auto;
-            text-align: center;
-        }
-
-        .container {
-            flex-grow: 1;
-            background-color: white;
-            padding: 20px;
-            border-radius: 8px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        .custom-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border: 1px solid #ddd;
-            border-radius: 20px;
-            text-decoration: none;
-            color: #000;
-            font-size: 16px;
-            transition: background-color 0.3s;
-            width: 200px;
-            margin: 20px auto 0;
-        }
-
-        .custom-button img {
-            width: 30px;
-            height: 30px;
-            margin-right: 10px;
-        }
-
-        .custom-button:hover {
-            background-color: #d0d0d0;
-        }
-
-        .savings-description {
-            background-color: #3b5998;
-            color: white;
-            padding: 10px;
-            border-radius: 5px;
-            margin-bottom: 20px;
-            text-align: center;
-        }
-
-        .savings-card {
-            background-color: #3b5998;
-            color: white;
-            padding: 20px;
-            border-radius: 8px;
-            text-align: center;
-            margin-bottom: 20px;
-        }
-
-        .savings-card img {
-            width: 50px;
-            height: 50px;
-            margin-bottom: 10px;
-        }
-
-        .savings-card h5 {
-            margin-bottom: 10px;
-        }
-
-        .savings-card p {
-            font-size: 14px;
-        }
-    </style>
+    <link href="css/movimientos.css" rel="stylesheet">
 </head>
 
 <body>
+
+    <div class="menu">
+        <h2>Menú</h2>
+        <a href="index.html">Inicio</a>
+        <a href="creacionProducto.html">Creacion Producto</a>
+        <a href="creacionTipoProducto.html">Creacion Tipo Producto</a>
+        <a href="tipos-cuentas.html">Tipos cuentas</a>
+        <a href="tipos-depositos.html">Tipos depositos</a>
+        <a href="vistaMovimientos.html">Vistas de Movimientos</a>
+    </div>
+
     <header class="d-flex justify-content-between align-items-center px-3 py-2">
         <div>
             <a href="#" class="btn btn-light">Volver</a>
@@ -105,17 +28,99 @@
         <h1 class="text-center flex-grow-1">Vista de movimientos</h1>
         <h5 class="navbar navbar-light">logo</h5>
     </header>
-    
+
     <div class="container mt-5">
-
+        <table class="table table-bordered table-striped">
+            <thead class="thead-dark">
+                <tr>
+                    <th scope="col">Fecha</th>
+                    <th scope="col">Monto</th>
+                    <th scope="col">Interés</th>
+                    <th scope="col">Acciones</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>2024-08-01</td>
+                    <td>$1,000.00</td>
+                    <td>5%</td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                            data-target="#movimientoModal" data-fecha="2024-08-01" data-monto="$1,000.00"
+                            data-interes="5%">Ver Movimiento</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2024-08-02</td>
+                    <td>$2,500.00</td>
+                    <td>4.5%</td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                            data-target="#movimientoModal" data-fecha="2024-08-02" data-monto="$2,500.00"
+                            data-interes="4.5%">Ver Movimiento</button>
+                    </td>
+                </tr>
+                <tr>
+                    <td>2024-08-03</td>
+                    <td>$3,000.00</td>
+                    <td>6%</td>
+                    <td>
+                        <button type="button" class="btn btn-primary btn-sm" data-toggle="modal"
+                            data-target="#movimientoModal" data-fecha="2024-08-03" data-monto="$3,000.00"
+                            data-interes="6%">Ver Movimiento</button>
+                    </td>
+                </tr>
+                <!-- Agrega más filas según sea necesario -->
+            </tbody>
+        </table>
     </div>
-    
 
+    <!-- Modal -->
+    <div class="modal fade" id="movimientoModal" tabindex="-1" role="dialog" aria-labelledby="movimientoModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="movimientoModalLabel">Detalles del Movimiento</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <p><strong>Fecha:</strong> <span id="modalFecha"></span></p>
+                    <p><strong>Monto:</strong> <span id="modalMonto"></span></p>
+                    <p><strong>Interés:</strong> <span id="modalInteres"></span></p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
-
-    <footer>
+    <footer class="text-center mt-4">
         <p>&copy; 2024 Nombre de tu empresa. Todos los derechos reservados.</p>
     </footer>
+
+    <!-- Bootstrap JS, Popper.js, and jQuery -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+
+    <script>
+        $('#movimientoModal').on('show.bs.modal', function (event) {
+            var button = $(event.relatedTarget); // Botón que disparó el modal
+            var fecha = button.data('fecha'); // Extraer información de los atributos data-*
+            var monto = button.data('monto');
+            var interes = button.data('interes');
+
+            // Actualizar el contenido del modal
+            var modal = $(this);
+            modal.find('#modalFecha').text(fecha);
+            modal.find('#modalMonto').text(monto);
+            modal.find('#modalInteres').text(interes);
+        });
+    </script>
 </body>
 
 </html>
