Create funcionality for tesoreria

--- a/Tesoreria/index.html
+++ b/Tesoreria/index.html
@@ -57,15 +57,15 @@
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/Desembolsos.png">
-                    <a href="desembolsos.html" class="module-title">Desembolsos</a>
+                    <a href="desembolsos.php" class="module-title">Desembolsos</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/ArqueoCajas.png">
-                    <a href="gestionCajas.html" class="module-title">Gestion de Cajas</a>
+                    <a href="gestionCajas.php" class="module-title">Gestion de Cajas</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/Inversiones.png">
-                    <a href="inversiones.html" class="module-title">Gestión de Inversiones</a>
+                    <a href="inversiones.php" class="module-title">Gestión de Inversiones</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/Asientos.png">
@@ -73,11 +73,11 @@
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/ClienteTesoreria.png">
-                    <a href="clientesTesoreria.html" class="module-title">Clientes de Tesoreria</a>
+                    <a href="clientesTesoreria.php" class="module-title">Clientes de Tesoreria</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/Reportes.png">
-                    <a href="reportes.html" class="module-title">Reportes</a>
+                    <a href="reportes.php" class="module-title">Reportes</a>
                 </div>
                 <div class="col-md-4 module">
                     <img src="public/img/Normativas.png">
