--- a/Tesoreria/index.html
+++ b/Tesoreria/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="header d-flex justify-content-between align-items-center px-3 py-2">
         <div>
-            <a href="index.html" class="btn btn-light mx-3 my-2">Volver</a>
+            <a href="/index.html" class="btn btn-light mx-3 my-2">Volver</a>
         </div>
         <h3 class="text-center flex-grow-1">Modulo Tesorería / Transferencias</h3>
         <h5 class="navbar navbar-light">logo</h5>
