--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Página Principal de la Cooperativa</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
-  <link href="style.css" rel="stylesheet" />
+  <link href="style2.css" rel="stylesheet" />
   <style>
     .module {
       margin: 15px 0;
@@ -60,7 +60,7 @@
       <div class="col-12 mb-4">
         <form class="search-bar d-flex justify-content-center">
           <input type="text" class="form-control" placeholder="Ingrese el departamento..." />
-          <button type="submit" class="btn btn-primary ml-2">Buscar</button>
+          <button type="submit" class="btn btn-primary btn-lg mx-4">Buscar</button>
         </form>
       </div>
     </div>
