--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <!-- Botón 6 -->
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3 module">
         <i class="bi bi-handbag-fill"></i>
-        <a href="cobros.html" class="module-title">Cobros</a>
+        <a href="/Cobros/cobros.php" class="module-title">Cobros</a>
       </div>
       <!-- Botón 7 -->
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3 module">
