Finished bench module

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       <!-- Botón 2 -->
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3 module">
         <i class="bi bi-bank"></i>
-        <a href="banco.html" class="module-title">Banco</a>
+        <a href="/modulo_banco/pages/index.php" class="module-title">Banco</a>
       </div>
       <!-- Botón 3 -->
       <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3 module">
