--- a/index.html
+++ b/index.html
@@ -135,6 +135,11 @@
         <i class="bi bi-person-gear"></i>
         <a href="usuarios_organizacion.html" class="module-title">Usuarios y Organización</a>
       </div>
+      <!-- Botón de Colocación -->
+      <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-3 module">
+        <i class="bi bi-briefcase-fill"></i>
+        <a href="/colocacion/pages/menu.php" class="module-title">Colocación</a>
+      </div>
     </div>
   </main>
   <footer class="footer text-white text-center py-3" style="background-color: #3b5998;">
