--- a/Captacion/SolicitudProductos.html
+++ b/Captacion/SolicitudProductos.html
@@ -33,9 +33,19 @@
         <div class="row">
             <div class="col">
                 <h3>Detalles de la Solicitud</h3>
-                <p><strong>Tipo de Cuenta:</strong> <span id="tipoCuenta"></span></p>
-                <p><strong>Intereses:</strong> <span id="intereses"></span></p>
-                <!-- Puedes agregar más detalles o formularios aquí -->
+                <p><strong>Usuario: Carlos</strong> </p>
+                <p><strong>Fecha: 20/8/2024</strong></p>
+                <p><strong>Tipo de Cuenta: Ahorro Navideño</strong> </span></p>
+                <p><strong>Detalles: El Ahorro Navideño es un producto financiero que le permite ahorrar dinero durante todo el
+                    año para tener un fondo disponible en diciembre y así poder afrontar los gastos de las
+                    fiestas navideñas sin tener que recurrir a créditos o préstamos.</strong> </p>
+                <p><strong>Intereses: 13%</strong></span></p>
+               
+            </div>
+            <div class="col">
+                <a href="tipos-cuentas.html" class="custom-button">
+                    <strong>Solicitar</strong>
+                </a>
             </div>
         </div>
     </div>
