--- a/Captacion/tipos-cuentas.html
+++ b/Captacion/tipos-cuentas.html
@@ -168,7 +168,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="#" class="custom-button" onclick="confirmSolicitar()">
+                    <a href="SolicitudProductos.html?tipo=Navideño" class="custom-button">
                         <img src="Images/navidad.png" alt="Infantil">
                         <strong>Solicitar</strong>
                     </a>
@@ -225,7 +225,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="#" class="custom-button" onclick="confirmSolicitar()">
+                    <a href="SolicitudProductos.html?tipo=Plazos" class="custom-button">
                         <img src="Images/plazos.png" alt="Plazos">
                         <strong>Solicitar</strong>
                     </a>
@@ -282,7 +282,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="#" class="custom-button" onclick="confirmSolicitar()">
+                    <a href="SolicitudProductos.html?tipo=Tradicional" class="custom-button">
                         <img src="Images/tradicional.png" alt="Tradicional">
                         <strong>Solicitar</strong>
                     </a>
@@ -339,7 +339,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="#" class="custom-button" onclick="confirmSolicitar()">
+                    <a href="SolicitudProductos.html?tipo=Marchamo" class="custom-button">
                         <img src="Images/marchamo.png" alt="Marchamo">
                         <strong>Solicitar</strong>
                     </a>
@@ -396,7 +396,7 @@
             </div>
             <div class="row">
                 <div class="col">
-                    <a href="#" class="custom-button" onclick="confirmSolicitar()">
+                    <a href="SolicitudProductos.html?tipo=Infantil" class="custom-button">
                         <img src="Images/infantil.png" alt="Infantil">
                         <strong>Solicitar</strong>
                     </a>
